<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/itemInfoImg"
        android:layout_width="141dp"
        android:layout_height="139dp"
        android:contentDescription="@string/character_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/itemStatusField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="608dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName|text"
        android:minHeight="48dp"
        android:text="@string/status"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/itemInfoImg"
        app:layout_constraintTop_toBottomOf="@+id/itemNameField"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/itemStatusField2"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="152dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName|text"
        android:minHeight="48dp"
        android:text="@string/gender"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/itemInfoImg"
        app:layout_constraintTop_toBottomOf="@+id/itemNameField" />

    <TextView
        android:id="@+id/itemLocationField"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName|text"
        android:minHeight="48dp"
        android:text="@string/last_location"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemInfoImg" />

    <TextView
        android:id="@+id/itemNameField"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName|text"
        android:minHeight="48dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/itemInfoImg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/itemInfoGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/itemStatusField2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <View
        android:id="@+id/divider4"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemLocationField"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="452dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/episodes"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/itemInfoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/itemNameField"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemInfoStatus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/itemNameField"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemInfoLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="171dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/textview"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toEndOf="@+id/itemLocationField"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemEpisode"
        android:layout_width="410dp"
        android:layout_height="438dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.777" />

</androidx.constraintlayout.widget.ConstraintLayout>